--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -30,15 +30,11 @@ jobs:
         run: |
           echo "Checking GITHUB_REF: $GITHUB_REF"
           FOLDER_NAME="nexus-git-development"
-
           if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
             TAG_NAME="${GITHUB_REF#refs/tags/}"
-
             git fetch origin master
             MASTER_COMMIT=$(git rev-parse origin/master)
-
             TAG_COMMIT=$(git rev-parse "${GITHUB_REF}")
-
             if [[ "$TAG_COMMIT" == "$MASTER_COMMIT" ]]; then
               export PACKAGE_ID="nexus-git-${TAG_NAME}"
               export PACKAGE_VERSION="${TAG_NAME}"
@@ -54,16 +50,12 @@ jobs:
             export PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
             export PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${GITHUB_REF}" == "refs/heads/master" ]]; then
-            echo "Advised to provide tag with the master branch, can't proceed further."
             exit 1
           fi 
-
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
-
           echo "PACKAGE_ID: $PACKAGE_ID"
           echo "PACKAGE_VERSION: $PACKAGE_VERSION"
-
       - name: Pack project
         run: |
           echo "Packaging with version: $PACKAGE_VERSION"
@@ -72,7 +64,6 @@ jobs:
             /p:PackageVersion=$PACKAGE_VERSION
           ARTIFACT_PATH="./bin/Release/${PACKAGE_ID}.${PACKAGE_VERSION}.nupkg"
           echo "ARTIFACT_PATH=${ARTIFACT_PATH}" >> $GITHUB_ENV
-
       - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
         with:
@@ -92,13 +83,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}  
           sonar_token: ${{ secrets.SONAR_TOKEN }} 
       - name: Check Quality Gate
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
-            sleep 20  
-            PROJECT_KEY="yashmahi88_nexus-git"  # Use your actual project key
+            sleep 5  
+            PROJECT_KEY="yashmahi88_nexus-git"  
             QUALITY_GATE_STATUS=$(curl -s -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=${PROJECT_KEY}")           
             echo "Quality Gate Status Response: $QUALITY_GATE_STATUS"           
-            PROJECT_STATUS=$(echo "$QUALITY_GATE_STATUS" | jq -r '.projectStatus.status')            # Check if all conditions are OK
+            PROJECT_STATUS=$(echo "$QUALITY_GATE_STATUS" | jq -r '.projectStatus.status')            
             ALL_CONDITIONS_OK=$(echo "$QUALITY_GATE_STATUS" | jq -r '.projectStatus.conditions | all(.status == "OK")')
             if [[ "$PROJECT_STATUS" != "OK" || "$ALL_CONDITIONS_OK" != "true" ]]; then
               echo "Quality Gate failed. Stopping the workflow."
@@ -130,4 +121,3 @@ jobs:
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
           dotnet nuget push ./bin/Release/*.nupkg --source http://52.187.94.85:8081/repository/nuget-tag --api-key $NEXUS_API_KEY 
-  
