--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -106,12 +106,11 @@ jobs:
               echo "Quality Gate passed."
             fi
         shell: bash
-  push_to_nexus:
+  push_to_nexus_tag:
     runs-on: ubuntu-latest
     needs: sonar_scan
-    #environment: nexus-approval
-    # if: github.ref == 'refs/heads/master'
-
+    if: startsWith(github.ref, 'refs/tags/')
+    environment: nexus-approval
     steps:
       - name: Download Package Artifact
         uses: actions/download-artifact@v3
@@ -121,12 +120,42 @@ jobs:
 
       - name: List files in Release directory
         run: ls -al ./bin/Release
-  
-      - name: Push to Nexus Repository
+
+      - name: Push to Nexus Repository (Tag)
         env:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/*.nupkg --source http://52.187.94.85:8081/repository/nuget-rc --api-key $NEXUS_API_KEY 
+          echo "Pushing to Nexus repository for tag: http://52.187.94.85:8081/repository/nuget-tag"
+          dotnet nuget push ./bin/Release/*.nupkg --source http://52.187.94.85:8081/repository/nuget-tag --api-key $NEXUS_API_KEY
+
+  push_to_nexus_branch:
+    runs-on: ubuntu-latest
+    needs: sonar_scan
+    if: github.ref == 'refs/heads/development' || github.ref == 'refs/heads/release'
+    steps:
+      - name: Download Package Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: nuget-package
+          path: ./bin/Release
+
+      - name: List files in Release directory
+        run: ls -al ./bin/Release
+
+      - name: Push to Nexus Repository (Branch)
+        env:
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+          NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
+            NEXUS_SOURCE="http://52.187.94.85:8081/repository/nuget-snapshot"
+          elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
+            NEXUS_SOURCE="http://52.187.94.85:8081/repository/nuget-rc"
+          fi
+          echo "Pushing to Nexus repository: $NEXUS_SOURCE"
+          dotnet nuget push ./bin/Release/*.
+
   
