--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -29,11 +29,15 @@ jobs:
         run: |
           echo "Checking GITHUB_REF: $GITHUB_REF"
           FOLDER_NAME="nexus-git-development"
+
           if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
             TAG_NAME="${GITHUB_REF#refs/tags/}"
+
             git fetch origin master
             MASTER_COMMIT=$(git rev-parse origin/master)
+
             TAG_COMMIT=$(git rev-parse "${GITHUB_REF}")
+
             if [[ "$TAG_COMMIT" == "$MASTER_COMMIT" ]]; then
               export PACKAGE_ID="nexus-git-${TAG_NAME}"
               export PACKAGE_VERSION="${TAG_NAME}"
@@ -49,12 +53,16 @@ jobs:
             export PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
             export PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${GITHUB_REF}" == "refs/heads/master" ]]; then
+
             exit 1
           fi 
+
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
+
           echo "PACKAGE_ID: $PACKAGE_ID"
           echo "PACKAGE_VERSION: $PACKAGE_VERSION"
+
       - name: Pack project
         run: |
           echo "Packaging with version: $PACKAGE_VERSION"
@@ -63,6 +71,7 @@ jobs:
             /p:PackageVersion=$PACKAGE_VERSION
           ARTIFACT_PATH="./bin/Release/${PACKAGE_ID}.${PACKAGE_VERSION}.nupkg"
           echo "ARTIFACT_PATH=${ARTIFACT_PATH}" >> $GITHUB_ENV
+
       - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
         with:
@@ -97,12 +106,11 @@ jobs:
               echo "Quality Gate passed."
             fi
         shell: bash
-  push_to_nexus:
+  push_to_nexus_tag:
     runs-on: ubuntu-latest
     needs: sonar_scan
-    #environment: nexus-approval
-    # if: github.ref == 'refs/heads/master'
-
+    if: startsWith(github.ref, 'refs/tags/')
+    environment: nexus-approval
     steps:
       - name: Download Package Artifact
         uses: actions/download-artifact@v3
@@ -112,11 +120,43 @@ jobs:
 
       - name: List files in Release directory
         run: ls -al ./bin/Release
-  
-      - name: Push to Nexus Repository
+
+      - name: Push to Nexus Repository (Tag)
         env:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/*.nupkg --source http://52.187.94.85:8081/repository/nuget-snapshot --api-key $NEXUS_API_KEY 
+          echo "Pushing to Nexus repository for tag: http://52.187.94.85:8081/repository/nuget-tag"
+          dotnet nuget push ./bin/Release/*.nupkg --source http://52.187.94.85:8081/repository/nuget-tag --api-key $NEXUS_API_KEY
+
+  push_to_nexus_branch:
+    runs-on: ubuntu-latest
+    needs: sonar_scan
+    if: github.ref == 'refs/heads/development' || github.ref == 'refs/heads/release'
+    steps:
+      - name: Download Package Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: nuget-package
+          path: ./bin/Release
+
+      - name: List files in Release directory
+        run: ls -al ./bin/Release
+
+      - name: Push to Nexus Repository (Branch)
+        env:
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+          NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
+            NEXUS_SOURCE="http://52.187.94.85:8081/repository/nuget-snapshot"
+          elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
+            NEXUS_SOURCE="http://52.187.94.85:8081/repository/nuget-rc"
+          fi
+          echo "Pushing to Nexus repository: $NEXUS_SOURCE"
+          dotnet nuget push ./bin/Release/*.nupkg --source $NEXUS_SOURCE --api-key $NEXUS_API_KEY
+
+
+  
