--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -19,7 +19,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  
+        uses: actions/checkout@v2 
+      
+      - name: Check out my other private repo
+        uses: actions/checkout@master
+        with:
+          repository: yashmahi88/check-nexus
 
       - name: Build Project 
         uses: ./.github/actions/build  
