--- a/.github/workflows/multi-repo.yaml
+++ b/.github/workflows/multi-repo.yaml
@@ -4,7 +4,7 @@ name: Trigger Other Repositories
 on:
     push:
       branches:
-        - main #manual trigger from GUi
+        - master #manual trigger from GUi
     workflow_dispatch:  
 
 jobs:
