--- a/.github/workflows/multi-repo.yaml
+++ b/.github/workflows/multi-repo.yaml
@@ -4,7 +4,7 @@ name: Trigger Other Repositories
 on:
   push:
     branches:
-        - master #manual trigger from GUi
+        - development #manual trigger from GUi
   workflow_dispatch:  
 
 jobs:
