--- a/.github/workflows/multi-repo.yaml
+++ b/.github/workflows/multi-repo.yaml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
         - development #manual trigger from GUi
-  workflow_dispatch:  
+  #workflow_dispatch:  
 
 jobs:
   trigger-repos:
