--- a/.github/workflows/wrkflw-template.yml
+++ b/.github/workflows/wrkflw-template.yml
@@ -1,4 +1,4 @@
-name: Main Workflow for Publishing Package
+name: Main Workflow
 
 on:
   push:
@@ -7,16 +7,19 @@ on:
       - release
     tags:
       - '*'
-      
 
 jobs:
   call_publish_package:
     uses: yashmahi88/.github/.github/workflows/publish-package.yml@main
     # with:
-    #   project_key: ${{ vars.PROJECT_KEY }}  
-    #   project_name: ${{ vars.PROJECT_NAME }}  
+    #   project_key: ${{ vars.PROJECT_KEY }}
+    #   project_name: ${{ vars.PROJECT_NAME }}
     # secrets: inherit
-    # #   NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-    # #   NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-    # #   NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
-    # #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+
+  call_sonar_scan:
+    needs: call_publish_package 
+    uses: yashmahi88/.github/.github/workflows/sonar-scan.yml@main
+    with:
+      project_key: ${{ vars.PROJECT_KEY }}
+      project_name: ${{ vars.PROJECT_NAME }}
+    secrets: inherit
